# hdc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dataset/emg/: README.md
dataset/language/: README.md
dataset/language/test/: bul.txt  ces.txt  dan.txt  deu.txt  ell.txt  eng.txt  est.txt  fin.txt  fra.txt  hun.txt  ita.txt  lav.txt  lit.txt  nld.txt  pol.txt  por.txt  ron.txt  slk.txt  slv.txt  spa.txt  swe.txt
dataset/language/train/: nld.txt  pol.txt  ron.txt  slk.txt  slv.txt  swe.txt
dataset/mnist/: README.md
dataset/voicehd/: README.md  test_labels.txt  train_labels.txt
lib/: CMakeLists.txt
src/: AssociativeMemory.hpp  BaseMemory.hpp  CMakeLists.txt  ContinuousItemMemory.hpp  HDV.cpp  HDV.hpp  ItemMemory.hpp  Vector.cpp  Vector.hpp  common.cpp  common.hpp  common_args.hpp  emg.cpp  emg.hpp  hdc.hpp  language.cpp  language.hpp  main.cpp  mnist.cpp  mnist.hpp  types.hpp  voicehd.cpp  voicehd.hpp
src/libbin/: CMakeLists.txt  bitmanip.cpp  bitmanip.hpp
test/: CMakeLists.txt  benchmark.cpp  test_hdc.cpp  test_hdv.cpp  test_vector.cpp
